--- a/index.html
+++ b/index.html
@@ -201,19 +201,9 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 <style>.panelset{--panel-tab-foreground: honeydew;--panel-tab-background: #C6CDF7;}</style>
 
 
-.pull-left[
-    &lt;img src="images/data_value_chain.png" height="300px"/&gt;
-    Land cover type of Bucharest
-    ]
+&lt;img src="images/data_value_chain.png" height="350px"/&gt;
+Data Value Chain for Remote Sensing
 
-.pull-right[
-
-- datavalue chain 1
-
-- datavalue chain 2 
-
-- datavalue chain 3
-]]
 
 .panel[.panel-name[Data flow]
 
@@ -234,6 +224,7 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
   
 ]]
 
+]
 ]
 
 
@@ -535,8 +526,8 @@ library(leaflet)
 leaflet() %&gt;% addTiles() %&gt;% setView(-93.65, 42.0285, zoom = 17)
 ```
 
-<div class="leaflet html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-2af420accb00642937c8" style="width:100%;height:432px;"></div>
-<script type="application/json" data-for="htmlwidget-2af420accb00642937c8">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]}],"setView":[[42.0285,-93.65000000000001],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-1a0582d0ec80e5fd49ea" style="width:100%;height:432px;"></div>
+<script type="application/json" data-for="htmlwidget-1a0582d0ec80e5fd49ea">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]}],"setView":[[42.0285,-93.65000000000001],17,[]]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
