--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ class: center, middle, inverse, title-slide
 ### CASA, UCL
 ]
 .date[
-### 2024/02/04 (updated: 2024-03-04)
+### 2024/02/04 (updated: 2024-03-05)
 ]
 
 ---
@@ -51,6 +51,9 @@ class: cover
 
 # Jakarta Rooftop Farming/Gardening Analysis
 
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 
 
@@ -112,6 +115,9 @@ class: center, bottom, inverse
 # You only live once!
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 # Group Assessment Remote Sensing
 
@@ -120,8 +126,12 @@ class: center, bottom, inverse
 
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 # Remote Sensing for Rooftop Farming
+
 
 ## City:
 Jakarta, Indonesia 
@@ -155,6 +165,9 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 # Project Planning
 
@@ -165,7 +178,7 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 .panelset[
 .panel[.panel-name[Workpack]
 
-<style>.panelset{--panel-tab-foreground: honeydew;--panel-tab-background: #C6CDF7;}</style>
+<style>.panelset{--panel-tab-foreground: honeydew;--panel-tab-background: seagreen;}</style>
 &lt;img src="images/WP_Breakdown.png" height="380px"/&gt;
 
 ]
@@ -191,6 +204,9 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 # Project Data Overview
 
@@ -198,7 +214,7 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 .panelset[
 .panel[.panel-name[Data Value]
 
-<style>.panelset{--panel-tab-foreground: honeydew;--panel-tab-background: #C6CDF7;}</style>
+<style>.panelset{--panel-tab-foreground: honeydew;--panel-tab-background: seagreen;}</style>
 
 
 &lt;img src="images/data_value_chain.png" height="350px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
@@ -230,10 +246,16 @@ Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial
 
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 # Project Timeline
 
 ---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 ## SWOT Analysis
 
@@ -263,7 +285,9 @@ Opportunities:
 3. Technological Advancements: The pace of technological change necessitates continuous investment to keep the remote sensing apparatus current and effective.
 4. Economic Sensitivity: Financial volatility can influence the availability of resources for project scaling and operation, making economic strategy a pivotal concern.
 ---
-
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 ## Feasibility Analysis
 
 ## Technical Feasibility:
@@ -281,7 +305,9 @@ Operationally, the project will establish a streamlined system for the maintenan
 ## Schedule Feasibility:
 The implementation timeline is structured in phases, beginning with a pilot program to test the feasibility and impact of rooftop farming. Following the pilot's success, the project will expand, with full-scale operations expected to commence within two years, factoring in all necessary preparatory and regulatory procedures.
 ---
-
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 # Limitation
 
 1. Push test
@@ -526,8 +552,8 @@ library(leaflet)
 leaflet() %&gt;% addTiles() %&gt;% setView(-93.65, 42.0285, zoom = 17)
 ```
 
-<div class="leaflet html-widget html-fill-item-overflow-hidden html-fill-item" id="htmlwidget-ff13d348f62771f094e1" style="width:100%;height:432px;"></div>
-<script type="application/json" data-for="htmlwidget-ff13d348f62771f094e1">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]}],"setView":[[42.0285,-93.65000000000001],17,[]]},"evals":[],"jsHooks":[]}</script>
+<div class="leaflet html-widget html-fill-item" id="htmlwidget-8b91f4211e631e7d432c" style="width:100%;height:432px;"></div>
+<script type="application/json" data-for="htmlwidget-8b91f4211e631e7d432c">{"x":{"options":{"crs":{"crsClass":"L.CRS.EPSG3857","code":null,"proj4def":null,"projectedBounds":null,"options":{}}},"calls":[{"method":"addTiles","args":["https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png",null,null,{"minZoom":0,"maxZoom":18,"tileSize":256,"subdomains":"abc","errorTileUrl":"","tms":false,"noWrap":false,"zoomOffset":0,"zoomReverse":false,"opacity":1,"zIndex":1,"detectRetina":false,"attribution":"&copy; <a href=\"https://openstreetmap.org/copyright/\">OpenStreetMap<\/a>,  <a href=\"https://opendatacommons.org/licenses/odbl/\">ODbL<\/a>"}]}],"setView":[[42.0285,-93.65000000000001],17,[]]},"evals":[],"jsHooks":[]}</script>
 
 ---
 
