--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ class: center, middle, inverse, title-slide
 ### CASA, UCL
 ]
 .date[
-### 2024/02/04 (updated: 2024-03-14)
+### 2024/02/04 (updated: 2024-03-15)
 ]
 
 ---
@@ -125,8 +125,100 @@ class: center, middle, inverse, title-slide
 # Jakarta – potential overview
 
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
+
+
+---
+
+# Case Study Global North
+
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
+
+.panelset[
+.panel[.panel-name[NYC]
+
+.pull-left[
+  &lt;img src="images/Case study_Motivation/casestudy1.jpeg"
+  height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+  
+  &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
+  blablabla blablabla description blablabla Source: &lt;a
+  href="http://sigitkusumawijaya.com/?portfolios=green-boarding-house"
+  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+  &lt;!-- 额外图源记得写一下描述 --&gt;
+  &lt;/div&gt;
+]
+
+.pull-right[
+  * NYC New Green Roof Law
+  
+  
+  * Urban farming has long become common practice on idle plots of land in cities, but today...
+  
+  * Sigit, who runs his own company named sigit.kusumawijaya, ...
+  
+  * By function, he says, rooftop gardens brimming with decorative plants...
+
+]
+
+]
+
+
+.panel[.panel-name[Copenhagen]
+
+.pull-left[
+  &lt;img src="images/Case study_Motivation/casestudy2.webp"
+  height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+  
+  &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
+  blablabla blablabla description blablabla Source: &lt;a
+  href="https://en.antaranews.com/news/256325/jakarta-distributes-hydroponic-racks-to-aid-urban-farming-in-pe
+  santren"
+  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+  &lt;!-- 额外图源记得写一下描述 --&gt;
+  &lt;/div&gt;
+]
+
+.pull-right[
+  * Jakarta (ANTARA) - The Jakarta Food Security, Marine, and Agriculture (KPKP)...
+  
+  &lt;br&gt; &lt;!-- 空行做排版，可自行删除 --&gt;
+  &lt;br&gt;
+  
+  
+  * "Santri (Islamic boarding school students) can also learn urban farming methods...
+
+]
+
+]
+
+
+.panel[.panel-name[Chicago]
+
+.pull-left[
+  &lt;img src="images/Case study_Motivation/casestudy3.jpeg"
+  height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+  
+  &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
+  blablabla blablabla description blablabla Source: &lt;a
+  href="https://www.superindo.co.id/korporasi-keberlanjutan/superindoberkebun/gardening_info_detail/soft_openi
+  ng_super_indo_berkebun_rooftop_pondok_kelapa_jakarta"
+  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+  &lt;!-- 额外图源记得写一下描述 --&gt;
+  &lt;/div&gt;
+]
+
+.pull-right[
+  Chicago Rooftop Gardening
+]
+
+]
+
+
+]
 
 
 ---
@@ -315,11 +407,11 @@ Air Pollution:...
 
 
 ---
+# Project Data Source
+
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
-
-# Project Data Source
 
 
 
@@ -331,7 +423,7 @@ Air Pollution:...
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-# Project Data Overview
+# Value and Data Flow
 
 .panelset[
 .panel[.panel-name[Data Value]
@@ -355,7 +447,17 @@ Air Pollution:...
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-# Methodology
+# Methodology Overview
+
+
+
+---
+
+# Data Architecture
+
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
 
 
 
@@ -394,40 +496,6 @@ Education
 ]
 
 
-
-
----
-&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
-&lt;/div&gt;
-
-# Project Planning
-
-
-.panelset[
-.panel[.panel-name[Workpack]
-
-&lt;img src="images/WP_Breakdown.png" height="380px"/&gt;
-
-]
-
-.panel[.panel-name[WBS]
-
-&lt;img src="images/WBS.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
-
-]
-
-.panel[.panel-name[Gantt Chart]
-
-&lt;img src="images/gantt.png" height="350px"/&gt;
-
-]
-
-
-]
-
-
-
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
@@ -464,6 +532,40 @@ Education
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
+# Project Planning
+
+
+.panelset[
+.panel[.panel-name[Workpack]
+
+&lt;img src="images/WP_Breakdown.png" height="380px"/&gt;
+
+]
+
+.panel[.panel-name[WBS]
+
+&lt;img src="images/WBS.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+]
+
+.panel[.panel-name[Gantt Chart]
+
+&lt;img src="images/gantt.png" height="350px"/&gt;
+
+]
+
+
+]
+
+
+
+
+
+---
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
+
 # Budget Breakdown
 
 
@@ -489,54 +591,55 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 .panelset[
 .panel[.panel-name[Data Source]
-### Issue
-Visual signal might not contribute to understanding of the physical structure.
+### Potential Issues
+Visual signal might not contribute to the understanding of the physical structure.
 (Data of some variables such as structural load capacity is difficult to obtain.）
 
-### Mitigation proposal
-* Consulting with experts in civil and structural engineering.
-* Conducting a Field investigation.
+### Mitigation 
+* Consulting with civil and structural experts.
+* Conducting a field investigation.
 
 ]
 
 
 .panel[.panel-name[Model]
-### Issue
+### Potential Issues
 * Various factors may occasionally hinder the performance of the model.
 &lt;br&gt;
 &lt;br&gt;
 &lt;br&gt;
 
-### Mitigation proposal
-* Remote Assistant (reset model, etc)
+### Mitigation
+* Remote assistant (reset model, calibration, etc)
 * On-site
 
 ]
 
 
 .panel[.panel-name[Regulation]
-### Issue
+### Potential Issues
 * Governance: Local policies (bylaws) could potentially lead to some areas being inaccessible for results.
 * Privacy: The outcomes may encroach upon private spaces, leading to reluctance.
 &lt;br&gt;
 &lt;br&gt;
 &lt;br&gt;
 
-### Mitigation proposal
-* Engaging with stakeholders early.
-* Public consultation.
+### Mitigation 
+* Proactive and early stakeholder engagement
+* Actively engage public opinion through transparent channels
 
 ]
 
 
 .panel[.panel-name[Uncontrollable Factors]
-### Issue
-* Sudden staff turnover.
+
+### Potential Issue
+* Unforeseen staff turnover.
 * Equipment failures.
 * Workload fluctuations.
 
 
-### Mitigation proposal
+### Mitigation
 * Alternative Personnel Reserve list, Cross-trained.
 * Regular maintenance.
 * Buffer time, Additional plan.
