--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
   &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-# Limitation
+# Limitations and Risks
 
 .panelset[
 .panel[.panel-name[Data Source]
