--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <title>Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia</title>
     <meta charset="utf-8" />
     <meta name="author" content="Sheng Hu, Zhaowei Cui, Lunan Wei, Mengyu Ding" />
-    <script src="libs/header-attrs-2.25/header-attrs.js"></script>
-    <script src="libs/mark.js-8.11.1/mark.min.js"></script>
-    <link href="libs/xaringanExtra-search-0.0.1/search.css" rel="stylesheet" />
-    <script src="libs/xaringanExtra-search-0.0.1/search.js"></script>
+    <script src="libs/header-attrs/header-attrs.js"></script>
+    <script src="libs/mark.js/mark.min.js"></script>
+    <link href="libs/xaringanExtra-search/search.css" rel="stylesheet" />
+    <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":false}) })</script>
-    <link href="libs/panelset-0.2.6/panelset.css" rel="stylesheet" />
-    <script src="libs/panelset-0.2.6/panelset.js"></script>
+    <link href="libs/panelset/panelset.css" rel="stylesheet" />
+    <script src="libs/panelset/panelset.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
   <body>
@@ -31,6 +31,8 @@ class: center, middle, inverse, title-slide
 ]
 
 ---
+
+
 
 
 
