Team logo finalised

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ class: center, middle, inverse, title-slide
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Case Study/Motivation
@@ -322,7 +322,7 @@ class: center, middle, inverse, title-slide
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Remote Sensing for Rooftop Farming
@@ -347,7 +347,7 @@ Air Pollution:...
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Current Policy
@@ -363,7 +363,7 @@ Air Pollution:...
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # SDG alignment
@@ -412,7 +412,7 @@ Air Pollution:...
 # Project Data Source
 
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 
@@ -422,7 +422,7 @@ Air Pollution:...
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Value and Data Flow
@@ -446,7 +446,7 @@ Air Pollution:...
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Methodology Overview
@@ -469,7 +469,7 @@ Air Pollution:...
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Existing Landuse | Demo Video
@@ -500,7 +500,7 @@ Education
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Project Analysis
@@ -531,7 +531,7 @@ Education
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Project Planning
@@ -565,7 +565,7 @@ Education
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Budget Breakdown
@@ -574,7 +574,7 @@ Education
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Prototype Preview
@@ -586,7 +586,7 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Limitations and Risks
@@ -635,7 +635,7 @@ Visual signal might not contribute to the understanding of the physical structur
 
 .panel[.panel-name[Uncontrollable Factors]
 
-### Potential Issue
+### Potential Issues
 * Unforeseen staff turnover.
 * Equipment failures.
 * Workload fluctuations.
@@ -654,7 +654,7 @@ Visual signal might not contribute to the understanding of the physical structur
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Contributions and Outlook
@@ -664,7 +664,7 @@ Visual signal might not contribute to the understanding of the physical structur
 
 ---
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
-  &lt;img src="images/casa_logo.jpg" alt="Logo" style="height: 75px; width: auto;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
 # Reference
