--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="libs/panelset/panelset.css" rel="stylesheet" />
     <script src="libs/panelset/panelset.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
+    <link rel="stylesheet" href="custom.css" type="text/css" />
   </head>
   <body>
     <textarea id="source">
@@ -27,7 +28,7 @@ class: center, middle, inverse, title-slide
 ### CASA, UCL
 ]
 .date[
-### 2024/02/04 (updated: 2024-03-15)
+### 2024/02/04 (updated: 2024-03-16)
 ]
 
 ---
@@ -124,11 +125,22 @@ class: center, middle, inverse, title-slide
 &lt;/style&gt;
 
 
+
+
+
 # Jakarta – potential overview
 
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
+
+
+
+
+
+
+
+
 
 
 ---
@@ -684,6 +696,7 @@ class: inverse, center, middle
 <script>var slideshow = remark.create({
 "highlightStyle": "github",
 "highlightLines": true,
+"ratio": "16:9",
 "countIncrementalSlides": false
 });
 if (window.HTMLWidgets) slideshow.on('afterShowSlide', function (slide) {
