--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@ Education
 
 .panel[.panel-name[Feasibility]
 
-&lt;img src="images/Feasibility.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/Feasibility1.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 ]
 
